--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1 style="border:2px solid tomato">First Post</h1>
     <h2>Suggest Post</h2>
     <p style="color: red">Happy Coding</p>
-    <a href="http://uriminzokkiri.com" target="_blank">Link1</a>
+    <a href="https://www.w3schools.com/html/" target="_blank">Link1</a>
     <img src="laptop_img1.jpg" width="500px" height="300px" alt="노트콤이미지" title="행복한 코딩">
 </body>
 </html>
