--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     <h2>Suggest Post</h2>
     <p style="color: red">Happy Coding</p>
     <a href="https://www.w3schools.com/html/" target="_blank">Link1</a>
-    <img src="laptop_img1.jpg" width="500px" height="300px" alt="노트콤이미지" title="행복한 코딩">
+    <img src="laptop_img1.jpg" width="500px" height="300px" alt="Laptop_image" title="Happy Coding">
 </body>
 </html>
