--- a/index.html
+++ b/index.html
@@ -28,7 +28,34 @@
     <h1 style="border:2px solid tomato">First Post</h1>
     <h2>Suggest Post</h2>
     <p style="color: red">Happy Coding</p>
+
+    <iframe width="640" height="360" 
+        src="https://www.youtube.com/embed/WD-LFlMi6iA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+    </iframe>
     <a href="https://www.w3schools.com/html/" target="_blank">Link1</a>
-    <img src="laptop_img1.jpg" width="500px" height="300px" alt="Laptop_image" title="Happy Coding">
+    <img src="laptop_img1.jpg" width="500px" height="300px" alt="노트콤이미지" title="행복한 코딩">
+    <p>
+        <div id="disqus_thread"></div>
+        <script>
+
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://minblog-2.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                            
+    </p>
 </body>
 </html>
